[ci skip] simplify code